tweaks to printouts, updating import functionality, removing old templates, and chaning the way that students are displayed in admin to reduce overhead

--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% if stats %}
 <div class="row-fluid">
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
@@ -80,6 +81,6 @@
     </div>
 
 </div>
-
+{% endif %}
 
 {% endblock %}
