--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -70,7 +70,7 @@ jQuery(document).ready(function() {
             from: 0,
             size: 20
         },
-        sort: [{"created_date.exact":{"order":"desc"}}],
+        sort: [{"created_date":{"order":"desc"}}],
         pager_on_top: true,
         sharesave_link: false,
         default_operator: 'AND',
