--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -80,7 +80,7 @@ jQuery(document).ready(function() {
         sharesave_link: false,
         default_operator: 'AND',
         default_freetext_fuzzify: "*",
-        pushstate: false,
+        pushstate: true,
         searchwrap_start: '<table id="facetview_table" class="tablesorter table table-striped table-bordered"><thead><tr><th><input type="checkbox" name="selectall" id="selectall" alt="check / uncheck this to select / deselect all" title="check / uncheck this to select / deselect all" class="filter-false"></th><th>Last name</th><th>First name</th><th>D.O.B</th><th>Post code</th><th>SIMD decile</th><th>School</th><th>Status</th><th>Archive</th></tr></thead><tbody id="facetview_results">',
         resultwrap_start: '<tr>',
         resultwrap_end: '</tr>',
