--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -148,6 +148,7 @@ jQuery(document).ready(function() {
             };
             var url = '/query/institution/_search?source=' + JSON.stringify(qry);
             $.ajax({
+                cache:false,
                 method:'GET',
                 datatype:'JSON',
                 url:url,
