fixing export of applications

--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -65,7 +65,7 @@ jQuery(document).ready(function() {
         	        <tr>
 	                    <td><input type="checkbox" name="ucas_number"> UCAS number</td>
 	                    <td><input type="checkbox" name="local_authority"> Local authority</td>
-	                    <td><input type="checkbox" name="applications"> Experience</td>
+	                    <td><input type="checkbox" name="experience"> Experience</td>
                 		<td><input type="checkbox" name="looked_after_child"> Looked after child</td>
                     </tr>
         	        <tr>
