fixing for the post-pae edit bug, and limiting view account exporting

--- a/portality/templates/leaps/admin/admin-base.html
+++ b/portality/templates/leaps/admin/admin-base.html
@@ -70,7 +70,9 @@ jQuery(document).ready(function($) {
                 <div class="span2">
                     <a class="btn btn-info" href="/admin/student">Manage student surveys</a>
                     <a class="btn btn-info" href="/admin/data{% if model %}/{{model}}{% endif %}">Manage supporting data</a>
+                    {% if current_user.do_admin %}
                     <a class="btn btn-info" href="/admin/archive">Manage data archives</a>
+                    {% endif %}
                 </div>
                 <div class="span8">
                     {% block options %}{% endblock %}
