--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -69,7 +69,7 @@
                 You are the super user. You can edit anything, edit user accounts, and turn surveys and interfaces on and off.
             {% else %}
                 {% if current_user.do_admin %} You have full edit and export ability.
-                {% else %} You can view and export any administrative data, but you cannot edit.
+                {% else %} You can view administrative data, but you cannot edit.
                 {% endif %}
             {% endif %}
             </p>
@@ -77,7 +77,9 @@
     </div>
     <div class="span3">
         <div class="alert alert-success" style="min-height:100px;">
+            {% if current_user.do_admin %}
             <p><a class="btn btn-success" href="/account/{{current_user.id}}" style="min-width:110px;">Account settings</a></p>
+            {% endif %}
             <p><a class="btn btn-success" href="/account/logout" style="min-width:110px;">Logout of LEAPS</a></p>
         </div>
     </div>
